# event-timers

./: Cargo.toml  README.md  build_and_copy.sh  event_tracks.json  report_categories.md
src/: config.rs  finished_events.rs  game_state.rs  gw2_api.rs  lib.rs  notification_logic.rs  time_utils.rs
src/ui/: main_window.rs  notifications.rs  settings.rs  time_ruler.rs
