[package]
name = "event_timers"
version = "1.2.3"
edition = "2021"
authors = ["hvaren"]
description = "Event timers port to Nexus, based on the wiki page of same name. Forked and extended by faker-ino."

[dependencies]
nexus = { git = "https://github.com/zerthox/nexus-rs", features = ["mumble"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.19"
parking_lot = "0.12"
libc = "0.2"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["rt", "macros"] }
open = "5"

[lib]
crate-type = ["cdylib"]
